styles.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --margin-left: 6rem;
}

body {
  font-family: "Inter";
}

.header {
  background: #000000;
  width: 100%;
  color: white;
}

.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 5px 0;
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

.nav-start {
  display: flex;
  align-items: center;
  margin-left: var(--margin-left);
}

.welcome {
  display: flex;
  align-items: flex-end;
  margin-left: 10px;
}

.nav-middle {
  margin-left: 5rem;
}

.nav-middle ul {
  list-style-type: none;
  display: flex;

  li {
    margin-right: 1rem;
    font-size: 15px;
  }
}

.nav-end button {
  font-size: 15px;
  margin-right: 1rem;
}

.nav-end button:not(:last-child) {
  background: none;
  border: none;
  color: #ffffff;
}

.nav-end button:last-child {
  background-color: #5b6cff;
  color: #ffffff;
  padding: 10px 20px 11.54px 20px;
  box-shadow: inset 1px 1px 1px rgba(255, 255, 255, 0.25);
  border-radius: 64px;
  border: none;
}

.hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: #000000;

  h2 {
    font-size: 103px;
    line-height: 121px;
    font-weight: normal;
  }

  .hero-about {
    font-size: 24px;
    line-height: 31.2px;
    text-align: center;
    width: 38ch;
    margin-top: 1rem;
  }

  .btn-group {
    display: flex;
    margin: 1rem 0;

    .hero-demo {
      background-color: #5b6cff;
      color: #ffffff;
      padding: 10px 20px 11.54px 20px;
      box-shadow: inset 1px 1px 1px rgba(255, 255, 255, 0.25);
      border-radius: 64px;
      border: none;
      margin-right: 1rem;
    }

    .how-it-works {
      display: flex;
      align-items: center;
      background: transparent;
      border-radius: 64px;
      border: 1px solid rgba(255, 255, 255, 0.2);
      padding: 10px 20px 11.54px 20px;
      color: #ffffff;
    }
  }
  .btn-group > * {
    font-family: "Inter";
    font-size: 1rem;
  }
}

.header-background-img {
  display: flex;
  justify-content: center;

  img {
    width: 100%;
  }
}

.header-bottom {
  display: flex;
  position: relative;
  margin-top: 1rem;
  padding-bottom: 2rem;
  gap: 20rem;

  .side-text {
    display: flex;
    flex-direction: column;
    margin-top: 1rem;
    margin-left: var(--margin-left);

    .larger-text {
      font-size: 45px;
      line-height: 53px;
      letter-spacing: -2px;
      width: 13ch;
    }

    .smaller-text {
      font-size: 15px;
      line-height: 21px;
      color: rgba(255, 255, 255, 0.65);
      width: 50ch;
      margin-top: 1rem;
    }
  }

  .companies-logo {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;
    filter: invert(1);

    .box1 {
      margin-top: 1.5rem;
    }
  }
}

div[class^="box"] {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;

  img {
    object-fit: contain;
    height: 2rem;
    width: 9rem;
  }
}

.header-bottom::before {
  content: "";
  width: 100%;
  height: 50px;
  background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
  position: absolute;
  z-index: 5;
}

.attendance {
  margin-top: 3rem;

  img {
    display: inline-block;
  }

  .attendance-top {
    display: flex;
    align-items: center;

    .attendance-rate {
      width: 282px;
      height: 39px;
      font-size: 29px;
      line-height: 38px;
      letter-spacing: -0.25px;
      color: #ffffff;
    }

    p > span {
      color: rgba(255, 255, 255, 0.5);
    }
  }

  p:last-child {
    font-size: 11px;
    line-height: 16px;
    color: rgba(255, 255, 255, 0.65);
  }
}

.unmatched-experience {
  background: #ffffff;
  color: #000000;
  display: flex;
  flex-direction: column;
  margin: 0 var(--margin-left);
  padding-top: 5rem;

  .top-text {
    display: flex;
    flex-direction: column;
    gap: 5rem;
  }

  .top-text p {
    line-height: 70px;
    letter-spacing: -2px;
  }

  .top-text p:first-child {
    font-size: 64px;
  }

  .top-text p:last-child {
    font-size: 248px;
  }

  .photo-section {
    margin-top: 12rem;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    width: 1280px;

    .top-part {
      display: flex;
    }

    .middle-part {
      display: flex;
      gap: 1.5rem;
    }

    .bottom-part {
      display: flex;
      gap: 1.5rem;
    }
  }

  .all-features-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
    align-self: center;
    margin-top: 3rem;
    padding: 10px 20px 11.54px 20px;
    width: 194.59px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 64px;
    background: none;
    font-family: "Inter";

    p {
      white-space: nowrap;
    }
  }
}

